# code-gym

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.md
paint_circle/: README.md  circle_test.py
parkinglot/: ParkingLot.py  README.md  parking_lot_ui.py
resetRowsWithZeros/: README.md  reset_rows_and_cols_with_zeros.py  reset_rows_ui.py  test_reset_rows_and_cols_with_zeros.py
spiral_printer/: README.md  spiral_printer.py  spiral_ui.py
